fixed z-index override

--- a/src/photoswipe/default-skin/default-skin.css
+++ b/src/photoswipe/default-skin/default-skin.css
@@ -21,6 +21,10 @@
 
  */
 
+.pswp {
+	z-index: 999999!important;
+}
+
 
 /* <button> css reset */
 
